force-app/main/default/objects/Subproducto__c/Subproducto__c.object-meta.xml
<CustomObject>
    <label>Subproducto</label>
    <nameField>
        <label>Nombre de Subproducto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subproductos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>