force-app/main/default/objects/Subproducto__c/fields/Cobrar_si_empleado_sigue_laborando__c.field-meta.xml
<CustomField>
    <fullName>Cobrar_si_empleado_sigue_laborando__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobrar si empleado sigue laborando</label>
    <type>Checkbox</type>
</CustomField>