force-app/main/default/objects/Subproducto__c/fields/Comisi_n_por_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Comisi_n_por_Aporte__c</fullName>
    <label>Comisión por Aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>