force-app/main/default/objects/Subproducto__c/fields/Comisi_n_Sobre_Saldo__c.field-meta.xml
<CustomField>
    <fullName>Comisi_n_Sobre_Saldo__c</fullName>
    <label>Comisión Sobre Saldo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>