force-app/main/default/objects/Subproducto__c/fields/De_23_anos__c.field-meta.xml
<CustomField>
    <fullName>De_23_anos__c</fullName>
    <label>De 2 - 3 años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>