force-app/main/default/objects/Subproducto__c/fields/FPC_Comercializable__c.field-meta.xml
<CustomField>
    <fullName>FPC_Comercializable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comercializable</label>
    <type>Checkbox</type>
</CustomField>