force-app/main/default/objects/Subproducto__c/fields/Mas_5_anos__c.field-meta.xml
<CustomField>
    <fullName>Mas_5_anos__c</fullName>
    <label>Mas de 5 años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>