force-app/main/default/objects/Subproducto__c/fields/Monto_Saldo_Minimo_CRA__c.field-meta.xml
<CustomField>
    <fullName>Monto_Saldo_Minimo_CRA__c</fullName>
    <label>Monto Saldo Minimo CRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>