force-app/main/default/objects/Subproducto__c/fields/observacion__c.field-meta.xml
<CustomField>
    <fullName>observacion__c</fullName>
    <label>Observación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>