force-app/main/default/objects/Subproducto__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Subproductos</relationshipLabel>
    <relationshipName>Subproductos</relationshipName>
    <type>Lookup</type>
</CustomField>