force-app/main/default/objects/Subproducto__c/fields/Rango__c.field-meta.xml
<CustomField>
    <fullName>Rango__c</fullName>
    <label>Rango</label>
    <type>TextArea</type>
</CustomField>