force-app/main/default/objects/Subproducto__c/fields/Retiro_Saldos_Patronales__c.field-meta.xml
<CustomField>
    <fullName>Retiro_Saldos_Patronales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retiro de Saldos Patronales</label>
    <type>Checkbox</type>
</CustomField>