force-app/main/default/objects/Subproducto__c/fields/Tipo_Fondo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Fondo__c</fullName>
    <label>Tipo de Fondo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Fondo</valueSetName>
    </valueSet>
</CustomField>