force-app/main/default/objects/Subproducto__c/fields/TipoComision__c.field-meta.xml
<CustomField>
    <fullName>TipoComision__c</fullName>
    <label>Tipo de Comisión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saldo</fullName>
            </value>
            <value>
                <fullName>Aporte</fullName>
            </value>
            <value>
                <fullName>Mixto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>