force-app/main/default/objects/Subproducto__c/fields/TipoFondoN__c.field-meta.xml
<CustomField>
    <fullName>TipoFondoN__c</fullName>
    <label>Tipo de Fondo (Nuevo)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pen</fullName>
                <label>Pensíon</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cesantía</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>