force-app/main/default/objects/Subproducto__c/fields/TipoProducto__c.field-meta.xml
<CustomField>
    <fullName>TipoProducto__c</fullName>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Contributivo</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No Contributivo</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cesantía</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Pensión</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>